--- a/assets/default/css/osint-navbar.css
+++ b/assets/default/css/osint-navbar.css
@@ -1,33 +1,42 @@
 .navbar {
   background-color: #000000;
   padding: 10px;
-  margin-top: 10px; /* Adjusted margin */
-  width: 100%; /* Full width */
+  margin-top: 10px;
+  width: 100%;
   display: flex;
-  justify-content: left; /* Centers the navbar content */
-  box-sizing: border-box; /* Ensures padding is included in the width */
+  justify-content: flex-start;
+  align-items: center;
+  position: relative;
+}
+
+.menu-left {
+  display: flex;
+  gap: 20px; /* Space between #menu-osint and #menu */
+}
+
+#menu-right {
+  position: fixed;
+  right: 20px;
+  top: 20px;
 }
 
 .navbar ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
-  display: flex; /* Flexbox layout for centering */
-  justify-content: left; /* Centers the items horizontally */
-  width: 100%;
+  display: flex;
+  gap: 10px; /* Space between individual list items */
 }
 
 .navbar ul li {
-  position: relative;
-  margin: 0 10px; /* Adds space between navbar items */
+  margin: 0 10px;
+  position: relative; /* Make li the reference for absolute positioning */
 }
 
-/* Styling for navbar items */
 .navbar ul li a {
   display: block;
-  color: rgb(161, 159, 159);
+  color: #333;
   text-align: center;
-  font-size: 22px;
   padding: 14px 20px;
   text-decoration: none;
   background-color: black;
@@ -39,63 +48,64 @@
   color: #e60073;
 }
 
-/* Styling for first-level submenus with responsive width */
+/* First level submenu */
 .navbar ul li ul {
   display: none;
   position: absolute;
   left: 0;
   top: 100%;
   background-color: black;
-  min-width: min-content; /* Make submenu width responsive to content */
-  white-space: nowrap; /* Prevent submenu items from breaking into multiple lines */
   z-index: 1;
-  padding: 10px; /* Add padding to ensure the text isn't touching edges */
 }
 
-/* Add 5px between each item in the submenu */
-.navbar ul li ul li {
-  margin-bottom: 5px;
-}
-
-.navbar ul li ul li:last-child {
-  margin-bottom: 0; /* No margin on the last item */
-}
-
-/* Show first-level submenus on hover */
+/* Show first-level submenu on hover */
 .navbar ul li:hover > ul {
   display: block;
 }
 
-/* Styling for second-level submenus (open to the right with better responsiveness) */
-.navbar ul li ul li ul {
-  left: 100%;
-  top: 0;
-  display: none;
-  position: absolute;
-  background-color: transparent;
-  min-width: min-content; /* Make second-level submenu width responsive */
-  white-space: nowrap; /* Prevent text wrapping in submenus */
+/* Styling for first-level submenu items */
+.navbar ul li ul li a {
+  color: black;
+  font-size: 12px;
+  background-color: lightgray;
+  text-align: left;
+  border-radius: 2px;
 }
 
-/* Show second-level submenus on hover */
+.navbar ul li ul li a:hover {
+  background-color: #e60073;
+  color: black;
+}
+
+/* Second-level submenu (nested) positioning */
+.navbar ul li ul li ul {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 100%; /* Positions the second-level submenu to the right of the parent */
+  background-color: black;
+  z-index: 2;
+}
+
+/* Show second-level submenu on hover */
 .navbar ul li ul li:hover > ul {
   display: block;
 }
 
-.navbar ul li ul li {
-  float: none;
+/* Ensure that the second-level submenu does not overlap with the parent menu */
+.navbar ul li ul li ul li {
+  position: relative;
 }
 
-.navbar ul li ul li a {
-  color: black;
+.navbar ul li ul li ul li a {
   font-size: 12px;
-  text-align: left;
-  background-color: lightgray;
-  border-radius: 10px;
-  /*text-transform: none;*/
+  background-color: #333;
+  color: white;
+  padding: 10px;
 }
 
-.navbar ul li ul li a:hover {
+/* Styling for hover in the second-level submenu */
+.navbar ul li ul li ul li a:hover {
   background-color: #e60073;
   color: black;
 }
@@ -105,12 +115,4 @@
   content: "";
   clear: both;
   display: table;
-}
-
-/* Media query to handle overflow and position submenus to the left if they overflow */
-@media (max-width: 768px) {
-  .navbar ul li ul li ul {
-    left: auto;
-    right: 100%; /* Position the submenu to the left if the screen is too narrow */
-  }
 }
