--- a/assets/default/css/style.css
+++ b/assets/default/css/style.css
@@ -1,3 +1,8 @@
+:root {
+  --red: #ff1616;
+  --pink: #e60073;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -59,7 +64,7 @@ justify-content: center;
 .search-input {
   width: 100%;
   padding: 15px 20px;
-  border: 2px solid #ff1616;
+  border: 2px solid var(--red);
   border-radius: 25px;
   outline: none;
   background: transparent;
@@ -77,7 +82,7 @@ justify-content: center;
   right: 20px;
   transform: translateY(-50%);
   font-size: 20px;
-  color: #ff1616;
+  color: var(--red);
 }
 
 .nav-links {
@@ -88,7 +93,7 @@ justify-content: center;
 }
 
 .nav-links a {
-  color: #ff1616;
+  color: var(--red);
   text-decoration: none;
 }
 
@@ -112,7 +117,7 @@ justify-content: center;
 }
 
 .search-bar {
-border: 2px solid #ff1616;
+border: 2px solid var(--red);
 background-color: black;
 width: 830px;
 height: 65px;
@@ -125,13 +130,13 @@ margin-top: 20px;
 
 .search-bar:hover {
 background-color: black;
-box-shadow: 3px 3px 30px #ff1616;
-border-color: #ff1616;
+box-shadow: 3px 3px 30px var(--red);
+border-color: var(--red);
 }
 
 .search-bar i {
 font-size: 15px;
-color: #ff1616;
+color: var(--red);
 margin-right: 15px;
 }
 
@@ -196,7 +201,7 @@ cursor: pointer;
 /* Styling for the selected button */
 .select-button button.selected {
 background-color: transparent;
-color: #ff1616;
+color: var(--red);
 
 .google-search-btn {
   width: 120px;
@@ -239,7 +244,7 @@ z-index: 1;
 }
 
 .circle-shadow:hover {
-background-color: #ff1616;
+background-color: var(--red);
 }
 
 .circle-shadow svg {
@@ -271,7 +276,7 @@ max-height: 120%;
 /* Styling for the selected button */
 .select-button button.selected {
 background-color: transparent;
-color: #ff1616;
+color: var(--red);
 
 .google-search-btn {
   width: 120px;
