--- a/assets/default/css/style.css
+++ b/assets/default/css/style.css
@@ -12,6 +12,9 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  overflow: hidden; /* Prevents scrollbars */
+  width: 100%;
+  height: 100%;
 }
 
 .main-content {
